--- a/anaData/bayesAna.yml
+++ b/anaData/bayesAna.yml
@@ -1,8 +1,10 @@
 name: bayesAna
 channels:
+  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - affine=2.3.0=py_0
   - argon2-cffi=20.1.0=py37h7b6447c_1
   - arviz=0.6.1=py_0
   - async_generator=1.10=py37h28b3542_0
@@ -13,27 +15,43 @@ dependencies:
   - blas=1.0=mkl
   - bleach=3.2.2=pyhd3eb1b0_0
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2021.1.19=h06a4308_0
+  - ca-certificates=2021.4.13=h06a4308_1
+  - cairo=1.14.12=h8948797_3
   - certifi=2020.12.5=py37h06a4308_0
-  - cffi=1.14.4=py37h261ae71_0
+  - cffi=1.14.0=py37h2e261b9_0
   - cftime=1.3.1=py37h6323ea4_0
-  - curl=7.71.1=hbc83047_1
+  - click=7.1.2=pyhd3eb1b0_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.1=py37h06a4308_0
+  - curl=7.67.0=hbc83047_0
   - cycler=0.10.0=py37_0
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37_0
   - expat=2.2.10=he6710b0_2
+  - fiona=1.8.4=py37hc38cc03_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.4=h5ab3b9f_0
+  - freexl=1.0.6=h27cfd23_0
+  - fribidi=1.0.10=h7b6447c_0
   - gcc_impl_linux-64=7.3.0=habb00fd_1
   - gcc_linux-64=7.3.0=h553295d_9
-  - glib=2.66.1=h92f7085_0
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
+  - gdal=2.3.3=py37hbb2a789_0
+  - geopandas=0.6.1=py_0
+  - geos=3.7.1=he6710b0_0
+  - giflib=5.1.4=h14c3975_1
+  - glib=2.63.1=h5a9c865_0
+  - gmp=6.1.2=h6c8ec71_1
+  - gmpy2=2.0.8=py37h10f8cd9_2
+  - graphite2=1.3.14=h23475e2_0
+  - graphviz=2.40.1=h21bd128_2
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
   - gxx_impl_linux-64=7.3.0=hdf63c60_1
   - gxx_linux-64=7.3.0=h553295d_9
   - h5py=2.10.0=py37h7918eee_0
+  - harfbuzz=1.8.8=hffaf4a1_0
   - hdf4=4.2.13=h3ca952b_2
   - hdf5=1.10.4=hb1b8bf9_0
   - icu=58.2=he6710b0_3
@@ -44,9 +62,11 @@ dependencies:
   - ipython=7.19.0=py37hb070fc8_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - ipywidgets=7.6.3=pyhd3eb1b0_1
-  - jedi=0.18.0=py37h06a4308_1
+  - jedi=0.17.0=py37_0
   - jinja2=2.11.2=pyhd3eb1b0_0
+  - joblib=0.17.0=py_0
   - jpeg=9b=h024ee3a_2
+  - json-c=0.13.1=h1bed415_0
   - jsonschema=3.2.0=py_2
   - jupyter=1.0.0=py37_7
   - jupyter_client=6.1.7=py_0
@@ -54,19 +74,27 @@ dependencies:
   - jupyter_core=4.7.0=py37h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - kealib=1.4.7=hd0c454d_6
   - kiwisolver=1.3.0=py37h2531618_0
-  - krb5=1.18.2=h173b8e3_0
+  - krb5=1.16.4=h173b8e3_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libcurl=7.71.1=h20c2e04_1
+  - libboost=1.67.0=h46d08c1_4
+  - libcurl=7.67.0=h20c2e04_0
+  - libdap4=3.19.1=h6ec2957_0
   - libedit=3.1.20191231=h14c3975_1
-  - libffi=3.3=he6710b0_2
+  - libffi=3.2.1=hf484d3e_1007
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgdal=2.3.3=h2e7e64b_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libgpuarray=0.7.6=h14c3975_0
-  - libnetcdf=4.7.3=hb80b6cc_0
+  - libkml=1.3.0=h590aaf7_4
+  - libnetcdf=4.6.1=h11d0813_2
   - libpng=1.6.37=hbc83047_0
+  - libpq=11.2=h20c2e04_0
   - libsodium=1.0.18=h7b6447c_0
+  - libspatialindex=1.9.3=he6710b0_0
+  - libspatialite=4.3.0a=hb08deb6_19
   - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
@@ -76,27 +104,34 @@ dependencies:
   - lz4-c=1.9.3=h2531618_0
   - mako=1.1.4=pyhd3eb1b0_0
   - markupsafe=1.1.1=py37h14c3975_1
+  - matplotlib=3.3.2=h06a4308_0
   - matplotlib-base=3.3.2=py37h817c723_0
   - mistune=0.8.4=py37h14c3975_1001
   - mkl=2020.2=256
   - mkl-service=2.3.0=py37he8ac12f_0
   - mkl_fft=1.2.0=py37h23d657b_0
   - mkl_random=1.1.1=py37h0573a6f_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.1.0=py37_0
+  - munch=2.5.0=py_0
   - nbclient=0.5.1=py_0
   - nbconvert=6.0.7=py37_0
   - nbformat=5.1.2=pyhd3eb1b0_1
   - ncurses=6.2=he6710b0_1
   - nest-asyncio=1.4.3=pyhd3eb1b0_0
-  - netcdf4=1.5.3=py37hbf33ddf_0
+  - netcdf4=1.4.2=py37h808af73_0
   - notebook=6.2.0=py37h06a4308_0
   - numpy=1.19.2=py37h54aff64_0
   - numpy-base=1.19.2=py37hfa32c7d_0
   - olefile=0.46=py37_0
-  - openssl=1.1.1i=h27cfd23_0
+  - openjpeg=2.3.0=h05c96fa_1
+  - openssl=1.1.1k=h27cfd23_0
   - packaging=20.8=pyhd3eb1b0_0
   - pandas=1.2.1=py37ha9443f7_0
   - pandoc=2.11=hb0f4dca_0
   - pandocfilters=1.4.3=py37h06a4308_1
+  - pango=1.42.4=h049681c_0
   - parso=0.8.1=pyhd3eb1b0_0
   - patsy=0.5.1=py37_0
   - pcre=8.44=he6710b0_0
@@ -104,6 +139,10 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.1.0=py37he98fc37_0
   - pip=20.3.3=py37h06a4308_0
+  - pixman=0.40.0=h7b6447c_0
+  - poppler=0.65.0=h581218d_1
+  - poppler-data=0.4.10=h06a4308_0
+  - proj4=5.2.0=he6710b0_1
   - prometheus_client=0.9.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.8=py_0
   - prompt_toolkit=3.0.8=0
@@ -113,25 +152,36 @@ dependencies:
   - pygpu=0.7.6=py37heb32a55_0
   - pymc3=3.8=py_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyproj=1.9.6=py37h14380d9_0
   - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.17.3=py37h7b6447c_0
-  - python=3.7.9=h7579374_0
+  - python=3.7.7=h191fe78_0_cpython
   - python-dateutil=2.8.1=py_0
+  - python-graphviz=0.14.2=py_0
   - pytz=2020.5=pyhd3eb1b0_0
   - pyzmq=20.0.0=py37h2531618_1
   - qt=5.9.7=h5867ecd_1
   - qtconsole=4.7.7=py_0
   - qtpy=1.9.0=py_0
-  - readline=8.0=h7b6447c_0
+  - rasterio=1.0.21=py37hc38cc03_0
+  - readline=7.0=h7b6447c_5
+  - rtree=0.9.4=py37_1
+  - scikit-learn=0.23.2=py37h0573a6f_0
   - scipy=1.5.2=py37h0b6359f_0
+  - seaborn=0.11.1=pyhd3eb1b0_0
   - send2trash=1.5.0=pyhd3eb1b0_1
   - setuptools=51.3.3=py37h06a4308_4
+  - shapely=1.6.4=py37h86c5351_0
   - sip=4.19.8=py37hf484d3e_0
   - six=1.15.0=py37h06a4308_0
+  - snuggs=1.4.7=py_0
   - sqlite=3.33.0=h62c20be_0
+  - statsmodels=0.12.2=py37h27cfd23_0
+  - sympy=1.7.1=py37h06a4308_0
   - terminado=0.9.2=py37h06a4308_0
   - testpath=0.4.4=py_0
   - theano=1.0.4=py37hfd86e86_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - tornado=6.1=py37h27cfd23_0
   - tqdm=4.55.1=pyhd3eb1b0_0
@@ -141,6 +191,7 @@ dependencies:
   - wheel=0.36.2=pyhd3eb1b0_0
   - widgetsnbextension=3.5.1=py37_0
   - xarray=0.16.2=pyhd3eb1b0_0
+  - xerces-c=3.2.3=h780794e_0
   - xz=5.2.5=h7b6447c_0
   - zeromq=4.3.3=he6710b0_3
   - zipp=3.4.0=pyhd3eb1b0_0
